add tests for search by HireDateName